refactor: turn octave options into list item